--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <meta charset="UTF-8">
     <title>SRT Player</title>
     <style>
-        body, html {
+        body {
             width: 100%;
             height: 100%;
             background: black;
@@ -17,10 +17,12 @@
             overflow: hidden;
             font-size: 4vw;
             font-family: 'Ubuntu', sans-serif;
+            touch-action: manipulation;
         }
 
-        input {
+        input, button, .icon {
             font-size: inherit;
+            touch-action: manipulation;
         }
 
         .hide {
