--- a/index.html
+++ b/index.html
@@ -67,13 +67,15 @@
         }
 
         .controls {
+            --controls-margin-x: 3vw;
+            --controls-margin-y: 3vh;
             display: flex;
             flex-direction: row;
             align-items: center;
             position: absolute;
-            bottom: 3vh;
-            width: 94vw;
-            left: 3vw;
+            left: var(--controls-margin-x);
+            bottom: var(--controls-margin-y);
+            width: calc(100vw - 2 * var(--controls-margin-x));
         }
 
         .controls > span {
@@ -83,6 +85,12 @@
         .controls svg {
             width: 5vh;
             height: 5vw;
+        }
+
+        .controls #close {
+            position: fixed;
+            top: var(--controls-margin-y);
+            right: var(--controls-margin-x);
         }
 
         #slider {
@@ -108,6 +116,7 @@
     <div id="sub" class="hide empty"></div>
 
     <div class="controls hide">
+        <span id="close" class="icon"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0z" fill="none"/><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></svg></span>
         <span id="pause" class="icon"><svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><g><rect fill="none" height="24" width="24"/></g><g><g><path d="M9,16h2V8H9V16z M12,2C6.48,2,2,6.48,2,12s4.48,10,10,10s10-4.48,10-10S17.52,2,12,2z M12,20c-4.41,0-8-3.59-8-8 s3.59-8,8-8s8,3.59,8,8S16.41,20,12,20z M13,16h2V8h-2V16z"/></g></g></svg></span>
         <span id="play" class="icon hide"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 14.5v-9l6 4.5-6 4.5z"/></svg></span>
         <span id="back" class="icon"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FFFFFF"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M18 9.86v4.28L14.97 12 18 9.86m-9 0v4.28L5.97 12 9 9.86M20 6l-8.5 6 8.5 6V6zm-9 0l-8.5 6 8.5 6V6z"/></svg></span>
